# one-note-mcp

./: .gitignore  README.md  docker-compose.yml  pyrightconfig.json
backend/: .env.example  Procfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 4456d0d30bf2_drop_has_handwriting_from_pages.py  4ce94f7dec27_add_has_handwriting_to_pages.py  6658bcb39a7f_notebook_sync_enabled_default_false.py  7e1b9c3a0f4d_add_pg_trgm.py  a1c2e3f40b5d_add_sync_jobs.py  b3f2a9c47e10_notebook_last_modified_datetime.py  c51d7c14c289_initial.py  cd67f79f85ca_cleanup_sync_status_model.py  d2e4f6a8c0b1_drop_content_hash_from_pages.py
backend/app/: main.py  models.py  schemas.py
backend/app/clients/: graph_client.py  msal_client.py  ocr_client.py
backend/app/core/: auth.py  config.py  database.py  encryption.py  exceptions.py
backend/app/mcp/: auth.py  deps.py  identity.py  server.py  tools.py  workos_auth.py
backend/app/repositories/: mcp_connection_repository.py  microsoft_connection_repository.py  notebook_repository.py  page_repository.py  section_repository.py  sync_job_repository.py  user_repository.py
backend/app/routers/: auth.py  deps.py  mcp_connections.py  me.py  notebooks.py  oauth_bridge.py
backend/app/services/: auth_service.py  mcp_connection_service.py  notebook_service.py  (+4 more)
backend/scripts/: analyze_pdf_extraction.py  bulk_seed_pages.py  explain_search_trgm.py  probe_page_attachments.py  smoke_mcp.py  smoke_oauth.py  smoke_rest.py  test_ocr.py  verify_last_modified.py  verify_search_service.py
backend/sync/: run.py  worker.py
(+64 files in other folders)
