[tool.poetry]
name = "onenote-mcp"
version = "0.1.0"
description = ""
authors = []
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "*"
fastmcp = "*"
sqlalchemy = {extras = ["asyncio"], version = "*"}
asyncpg = "*"
alembic = "*"
msal = "*"
cryptography = "*"
pyjwt = "*"
uvicorn = {extras = ["standard"], version = "*"}
python-dotenv = "*"
easyocr = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
