[project]
name = "onenote-mcp"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "fastmcp",
    "sqlalchemy[asyncio]",
    "asyncpg",
    "alembic",
    "msal",
    "cryptography",
    "pyjwt",
    "uvicorn[standard]",
    "python-dotenv",
    "greenlet",
    "pydantic-settings",
    "httpx",
    "tenacity",
    "pillow",
    "google-cloud-vision",
    "beautifulsoup4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false
exclude-newer = "1 week"
